# LearnLua

./: CMakeLists.txt  lua_cmake_gen_vs2022.bat  lua_exe_compile_install.bat
lib/: lua.lib
lua/: CMakeLists.txt
luac/: CMakeLists.txt
src/: CMakeLists.txt  lua_cmake_compile_install.bat
